# lang_style

./: .gitignore
core/: .gitignore  CMakeLists.txt  CMakeLists.txt.user.2aa5cf0  clear  clear.py  env  pytest.ini  test.py
core/lang_style/: CMakeLists.txt  collocations_checker.py  test.py
core/lang_style/collocation_finder/: api_phrasefinder.py  collocation_finder.py  test.py
core/lang_style/corrections/: __init__.py  corrections.py  test.py
core/lang_style/corrections/word_choices/: __init__.py  word_choices.py
core/lang_style/include/: lang_style.h
core/lang_style/src/: lang_style.cpp
core/lang_style/src/Collocations_checker/: Collocations_checker.cpp  Collocations_checker.h
core/lang_style/src/Collocations_checker/Corrections/: Corrections.h
core/lang_style/src/Collocations_checker/Corrections/Word_choice/: Word_choice.cpp
core/lang_style/src/Word/: Word.cpp  Word.h
core/lang_style/src/logging/: init_logging.hpp
core/lang_style/synonim_finder/: __init__.py  api_phrasefinder.py  api_webster.py  my_synonim_finder.py  synonim_finder.py  test.py
core/lang_style/text_analyser/: test.py  text_analyser.py
core/lang_style/text_preprocessor/: test_.py  text_preprocessor.py
core/lang_style/word_choices/: word_choices.py
core/tests/: CMakeLists.txt
core/tests/src/: main.cpp
core_cpp/: .gitignore  CMakeLists.txt
core_cpp/lang_style/src/: lang_style.cpp
core_cpp/lang_style/src/Collocations_checker/Corrections/: Corrections.cpp
core_cpp/lang_style/src/Collocations_checker/Corrections/Word_choice/: Word_choice.h  about.txt
core_cpp/lang_style/src/logging/: init_logging.cpp
core_cpp/tests/src/: main.cpp
envelope/: .gitignore  finder.py
envelope/lang_style/: collocation_checker.py
envelope/tests/: checker_test.py  use_collocation_checker.py
envelope_for_cpp/lang_style/: collocation_checker.py
graph_helper/: Pipfile  graph_helper.py  sounds of nature.graphml  test.py  weather.graphml  weather.graphmlz
graph_helper/pygraphml/: graph.py  graphml_parser.py  item.py  node.py
